# LDT-BPLA-24

./: README.md  docker-compose-cpu.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  settings.py
backend/alembic/versions/: 20230525_171301_init_users-68092a1b2729.py  20230525_171301_initial_large_migration-68092a1b2729.py  20240613_121648_init_projects-e73e6a1a47d9.py  20240625_175628_add_frame_content_idx-f989f900cbcb.py  20240626_014543_add_detected_cnt-27e734b86399.py  new_20230525_171301_initial_large_migration-68092a1b2729.py
backend/data_samples/: данные по каждому дому - Лист1.csv
backend/main/: run_server.py  run_server_gunicorn.py
backend/notebooks/: image-cropper.ipynb  inference_drone.ipynb
backend/scripts/: init_db_for_android.py  init_db_prod.py
backend/src/db/: base_manager.py  common_sql_model.py
backend/src/db/projects/: db_manager.py  enums.py  models.py  sql_model.py
backend/src/db/projects/db_manager/: apartment.py  frame.py  frame_markup.py  label.py  project.py  project_document.py  project_tag.py  user_role.py  verification_tag.py  video.py
backend/src/db/projects/models/: __init__.py  apartment.py  frame.py  frame_markup.py  label.py  project.py  project_document.py  project_tag.py  user_role.py  verification_tag.py  video.py
backend/src/db/users/: db_manager.py  models.py  sql_model.py
backend/src/db/users/db_manager/: user.py  user_password.py  user_token.py
backend/src/db/users/models/: user.py  user_password.py  (+1 more)
backend/src/server/: amqp.py  amqp_processors.py  common.py  constants.py  server.py  telegram_bot.py
backend/src/server/projects/: endpoints.py  endpoints_old.py  models.py  post_processing.py  router.py  video_utils.py
backend/src/server/users/: endpoints.py  endpoints_old.py  models.py  router.py
backend/templates/: video_streaming_test.htm
notebooks/: image-filter-roboflow.ipynb  image-parser.ipynb  pyproject.toml
yolo-model/: Dockerfile  Dockerfile-cpu  pyproject.toml  settings.py
yolo-model/main/: run_server.py  run_server_gunicorn.py
yolo-model/src/server/: amqp_processors.py  object_detection_processor.py  object_detection_processor_async.py
(+351 files in other folders)
