[tool.poetry]
name = "bpla"
version = "0.1.0"
description = ""
authors = ["Nikita Orekhov <nikanor97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
alembic = "1.12.1"
sqlalchemy = "2.0.23"
python-dotenv = "^1.0.0"
fastapi = "0.110.0"
pydantic = "1.10.0a1"
psycopg2-binary = "2.9.9"
sqlmodel = "0.0.12"
loguru = "0.7.2"
uvicorn = "0.24.0.post1"
uvloop = "0.19.0"
asyncpg = "0.29.0"
aiofiles = "^23.1.0"
python-multipart = "0.0.9"
orjson = "3.9.10"
ffmpeg-python = "^0.2.0"
types-aiofiles = "^23.1.0.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.7"
jinja2 = "^3.1.2"
sqlalchemy-utils = "0.41.1"
pandas = "^2.0.1"
aiohttp = "^3.8.4"
aio-pika = "^9.0.7"
ujson = "^5.7.0"
opencv-python = "^4.7.0.72"
torch = "^2.0.1"
plotly = "^5.14.1"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
pycln = "^2.1.3"
notebook = "^6.5.4"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
