[tool.poetry]
name = "yolo-model"
version = "0.1.0"
description = ""
authors = ["nikita <nikanor97@gmail.com>"]
readme = "README.md"
packages = [{include = "yolo_model"}]

[tool.poetry.dependencies]
python = "^3.10"
sahi = "^0.11.16"
scikit-learn = "^1.5.0"
loguru = "^0.7.2"
fastapi = "^0.111.0"
aio-pika = "^9.0.7"
torch = "^2.0.1"
ultralytics = "^8.2.32"
gunicorn = "^22.0.0"
aiofiles = "^23.2.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
